[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Caramel Sweets.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Sounds/PlayerDied.wav" type="AudioStream" id=7]
[ext_resource path="res://src/UserInterface/MusicButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Buttons/VirtualButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/button/menuclicked.png" type="Texture" id=10]
[ext_resource path="res://assets/button/menu.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "Skor: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Virus" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1878.31
margin_top = 35.0169
margin_right = -1548.31
margin_bottom = 135.017
custom_fonts/font = SubResource( 1 )
text = "Virus Mati : %s / %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.840881
margin_top = -0.840942
margin_right = 0.84082
margin_bottom = -0.840942
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
text = "PAUSE"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -135.0
margin_right = 216.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 8 )]
margin_right = 450.0

[node name="RetryButton2" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 154.0
margin_right = 450.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 213.0
margin_right = 450.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 3 )
text = "KEMBALI KE MENU AWAL"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_top = 272.0
margin_right = 450.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 4 )

[node name="PlayerDied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="VirtualButton" parent="." instance=ExtResource( 9 )]
position = Vector2( 143.675, 839.602 )

[node name="PauseButton" type="TouchScreenButton" parent="."]
position = Vector2( 1694.92, 42.6536 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="released" from="PauseButton" to="." method="_on_PauseButton_released"]
